[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 69

[dependencies]
glob = "0.3.1"
rodio = { version = "0.16.0", features = ["symphonia-all"]}
lofty = "0.11.0"
home = "0.5.4"
termion = "2.0.1"
